fixed height of search and input boxes so that txt is centered on safari
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ReportingTools@77644 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/extdata/csslib/reprise.table.bootstrap.css
+++ b/inst/extdata/csslib/reprise.table.bootstrap.css
@@ -34,11 +34,17 @@ table th.no-print {
  	font-size: 0pt; 
 } 
 
+
+/* from-to box and search: size of the text entered into input boxes */
+/* also changes height of the box to make the txt centered */
+input {
+    font-size:8pt;
+    min-height: 25px;
+}
+
 /* from-to box: size of the input boxes */
-/* from-to box: size of the text entered into input boxes */
 input.number_range_filter {
     width:40px;
-    font-size:8pt;
 }
 
 
